--- a/src/css/base/base.scss
+++ b/src/css/base/base.scss
@@ -155,16 +155,16 @@ xmp {
 }
 
 // 可变商用字体，可使用 font-variation-settings
-@font-face {
-  font-family: MiSans VF;
-  src: url("@/assets/font/MiSans/MiSans VF.ttf");
-  font-display: block;
-  font-style: normal italic;
-  font-weight: 100 900;
-  font-stretch: 0% 400%;
-  font-feature-settings: normal;
-  font-variation-settings: normal;
-}
+// @font-face {
+//   font-family: MiSans VF;
+//   src: url("@/assets/font/MiSans/MiSans VF.ttf");
+//   font-display: block;
+//   font-style: normal italic;
+//   font-weight: 100 900;
+//   font-stretch: 0% 400%;
+//   font-feature-settings: normal;
+//   font-variation-settings: normal;
+// }
 
 // 没有字体文件暂时注释
 // @font-face {
