--- a/src/layout/defaylt.module.scss
+++ b/src/layout/defaylt.module.scss
@@ -1,12 +1,39 @@
-.header {
-  background-color: #eee;
-  // position: fixed;
-  // top: 0;
-  // left: 0;
-  // right: 0;
-  // user-select: none;
+$title_bar_height: 30px;
 
-  // mac 高度
-  height: 30px;
-  width: 100%;
+@mixin router-box() {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  &::-webkit-scrollbar {
+    width: 0;
+  }
+  @content;
+}
+
+.layouBox {
+  height: inherit;
+  .header {
+    background-color: #eee;
+    // position: fixed;
+    // top: 0;
+    // left: 0;
+    // right: 0;
+    float: left;
+    user-select: none;
+
+    // mac 高度
+    height: $title_bar_height;
+    width: 100%;
+  }
+
+  .routerWindowsBox {
+    @include router-box {
+      height: calc(100% - $title_bar_height);
+    }
+  }
+
+  .routerMacBox {
+    @include router-box {
+      height: 100%;
+    }
+  }
 }
