--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,2 +1,25 @@
 .box {
+  width: 100%;
+  height: 100%;
+
+  .header {
+    display: flex;
+    text-align: center;
+
+    span {
+      padding: 5px 10px;
+      width: 100%;
+      border: 1px solid #262626;
+    }
+  }
+
+  .list {
+    display: flex;
+    text-align: center;
+
+    span {
+      padding: 5px 10px;
+      width: 100%;
+    }
+  }
 }
