--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -1,25 +1,119 @@
+$theme_bg_image: linear-gradient(243deg, #fce38a, #f38181);
+$padding-left-right: 16px;
+
 .box {
   width: 100%;
   height: 100%;
 
-  .header {
-    display: flex;
-    text-align: center;
+  display: flex;
+  flex-flow: column;
 
-    span {
-      padding: 5px 10px;
-      width: 100%;
-      border: 1px solid #262626;
+  background-image: $theme_bg_image;
+  color: #fff;
+
+  .header {
+    padding: 10px $padding-left-right;
+    text-align: left;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+
+    & span {
+      flex: 1;
     }
   }
 
   .list {
-    display: flex;
-    text-align: center;
+    width: 100%;
+    overflow-y: scroll;
 
-    span {
-      padding: 5px 10px;
-      width: 100%;
+    .list_box {
+      padding: 0 $padding-left-right;
+
+      .drop-tip {
+        width: 100%;
+        height: 100%;
+        font-size: 60px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        filter: blur(3px);
+      }
+
+      .image_info {
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+
+        height: 50px;
+        background: rgba(255, 255, 255, 1);
+        color: #262626;
+
+        margin: 1px 0px;
+        padding: 10px;
+
+        & span {
+          flex: 1;
+        }
+
+        .cell-down {
+          & p {
+            cursor: pointer;
+            text-decoration: none;
+            color: rgb(255, 0, 0);
+            font-size: 12px;
+          }
+        }
+
+        &:hover {
+          background: rgb(225, 228, 231);
+        }
+      }
+    }
+  }
+
+  footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px $padding-left-right;
+
+    .action {
+      align-items: center;
+
+      .quality_box {
+        display: inline-block;
+        margin: 0 5px;
+
+        .silder {
+          margin: 5px;
+        }
+
+        .quality_num {
+          display: inline-block;
+          width: 35px;
+          text-align: left;
+        }
+      }
+
+      .btn {
+        display: inline-block;
+
+        cursor: pointer;
+        margin: 0 5px;
+        border-radius: 5px;
+        border: 1px solid #fff;
+        padding: 2px 5px;
+
+        // &:hover {
+        //   color: #80b9ea;
+        //   border: 0.5px solid #80b9ea;
+        // }
+      }
     }
   }
 }
