--- a/src/css/base/base.scss
+++ b/src/css/base/base.scss
@@ -1,6 +1,6 @@
 //https://juejin.cn/post/7055845836298649636#heading-7
-@import "./normalize";
-@import "./tool";
+@use "./normalize";
+@use "./tool";
 
 /* 初始化 */
 a,
