--- a/src/css/var/index.scss
+++ b/src/css/var/index.scss
@@ -1,3 +1,3 @@
-@import "@/css/var/button.scss";
-@import "@/css/var/box.scss";
-@import "@/css/var/input.scss";
+@forward "@/css/var/button.scss";
+@forward "@/css/var/box.scss";
+@forward "@/css/var/input.scss";
